--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,46 @@ version: "3"
 services:
   redis:
     image: redis
-    ports:
-      - "6479:6379"
+    restart: always
+
   postgres:
     image: postgres
-    ports:
-      - "5532:5432"
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: outline
+    volumes:
+      - ./data/pgdata:/var/lib/postgresql/data
+    restart: always
+
   s3:
     image: lphoward/fake-s3
     ports:
       - "4569:4569"
     volumes:
-      - ./fakes3:/fakes3_root
+      - ./data/fakes3:/fakes3_root
+    restart: always
+  
   outline:
-    image: outline:v001
-    command: yarn dev
+    image: zacharyjia/outline
+    command: yarn start
     build:
       context: .
       dockerfile: Dockerfile
       args:
         pull: 1
+    restart: always
     ports:
-      - "3000:3000"
+      - "9000:3000"
+    environment:
+      PGSSLMODE: disable
     volumes:
-      - .:/opt/outline
+      - .env:/opt/outline/.env
     depends_on:
+      - postgres
+      - redis
+      - s3
+    links:
       - postgres
       - redis
       - s3
